@@ -1,5 +1,6 @@
 0.53 - added support for sqlite statement api and native binds
 	fixed some leaks related to using sys::getHostName()
+	added multiarch detection
 
 0.52 - sqlrsh has long reported the wrong version, fixed that
 	added csv support to sqlr-export and a -format xml|csv option
